--- a/packages/codemirror/glimmer/dev/index.html
+++ b/packages/codemirror/glimmer/dev/index.html
@@ -12,29 +12,31 @@
         background-color: #282c34;
       }
 
+      .layout {
+        height: 100vh;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        overflow: hidden;
+      }
       #editor {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: calc(50% - 0.125rem);
         height: 100vh;
         overflow: scroll;
         border-right: solid 0.125rem #111;
       }
 
       #editor-ast {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 50%;
         height: 100vh;
         overflow: scroll;
       }
     </style>
   </head>
   <body class="replit-ui-theme-root dark">
-    <div id="editor"></div>
-    <div id="editor-ast"></div>
+    <div class="layout">
+      <div id="editor"></div>
+      <div id="editor-ast"></div>
+    </div>
+
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
