--- a/packages/codemirror/glimdown/dev/index.html
+++ b/packages/codemirror/glimdown/dev/index.html
@@ -16,7 +16,7 @@
         height: 100vh;
         width: 100%;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         overflow: hidden;
       }
       #editor {
@@ -24,17 +24,11 @@
         overflow: scroll;
         border-right: solid 0.125rem #111;
       }
-
-      #editor-ast {
-        height: 100vh;
-        overflow: scroll;
-      }
     </style>
   </head>
   <body class="replit-ui-theme-root dark">
     <div class="layout">
       <div id="editor"></div>
-      <div id="editor-ast"></div>
     </div>
 
     <script type="module" src="./index.ts"></script>
